--- a/index.html
+++ b/index.html
@@ -47,6 +47,15 @@
       <p>Between <code>em</code> and <code>rem</code>, <code>rem</code> has a nice advantage of all elements being relative to one single root font value, where nested elements with parent/child font size dependencies can still be hard to manage with <code>em</code> units. When writing responsive styles, <code>rem</code> allows you to simply update the root font size at different screen sizes and all elements using <code>rem</code> units will adjust themselves accordingly creating a super easy-to-manage typography size system.</p>
       <p>In small projects you may not have an issues hard coding pixelage, but it's always important to understand the drawbacks of writing styles that may not be responsive or dynamic.</p>
   </div>
-  
+  <footer>
+    <ul>
+      <li><a href="#privacy">Privacy Policy</a></li>
+      <li><a href="#terms">Terms & Conditions</a></li>
+      <li><a href="#about">About</a></li>
+      <li><a href="#contact">Contact Us</a></li>
+      <li><a href="#info">More Info</a></li>
+    </ul>
+  </footer>
+   
 </body>
 </html>
